Add main styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="#" />
   <title>JavaScript & CSS panel image gallery</title>
+  <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
@@ -36,7 +37,7 @@
       <p>Motion</p>
     </div>
   </div>
-  
+
   <script src="./js/main.js"></script>
 </body>
 </html>
